# django-todo-react

./: .gitignore  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
backend/: .dockerignore  Dockerfile  db.sqlite3  pyproject.toml
backend/backend/: settings.py  urls.py
backend/todo/: models.py
backend/todo/migrations/: 0001_initial.py  0002_alter_todo_completed.py
frontend/: .env.development  .env.production  eslint.config.js  package.json
frontend/src/: App.jsx  main.jsx  store.js
frontend/src/components/: Items.jsx  Modal.jsx  TabList.jsx
frontend/src/reducers/: activeReducer.js  completedReducer.js  modalReducer.js  todoReducer.js
frontend/src/services/: todo.js
nginx/: nginx.conf
