[project]
name = "django-todo-react"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django-cors-headers>=4.7.0",
    "djangorestframework>=3.16.0",
    "environs>=14.1.1",
    "gunicorn>=23.0.0",
    "uvicorn-worker>=0.3.0",
    "uvicorn[standard]>=0.34.2",
]
